--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,11 +24,11 @@ jobs:
           fi
 
       - name: Fail Test
-        if: steps.test-previous.outputs.prev_ok == "true"
+        if: steps.test-previous.outputs.prev_ok == 'true'
         run: exit 1
 
       - name: Pass Test
-        if: steps.test-previous.outputs.prev_ok == "true"
+        if: steps.test-previous.outputs.prev_ok == 'true'
         run: exit 0
 
       - name: Run Anyway
