--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
           fi
 
       - name: Fail Test
-        if: steps.test-previous.outputs.prev_ok == 'true'
+        if: always() && steps.test-previous.outputs.prev_ok == 'true'
         run: exit 1
 
       - name: Pass Test
@@ -36,4 +36,4 @@ jobs:
 
       - name: Run Anyway
         if: always()
-        run: echo "Hello"
+        run: core.notice("Hello")
